--- a/client-side/src/styles/Allcomponent.scss
+++ b/client-side/src/styles/Allcomponent.scss
@@ -58,13 +58,7 @@
 }
 
 
-body{
-    background: rgb(24,29,54);
-    background: linear-gradient(90deg, rgba(24,29,54,1) 0%, rgba(20,21,26,1) 37%);
-    margin: 0;
-    height: fit-content;
-    width: 100%;
-  }
+
 
   
   
@@ -775,4 +769,28 @@ font-size: 14px;
   to {
     transform: translateY(-10px); 
   }
+}
+
+
+.dashboard {
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Adjust the height as needed */
+  background-color: rgb(214, 214, 80);
+
+}
+.react-time-picker {
+  width: 150px; /* Adjust the width as needed */
+  font-size: 16px; /* Adjust the font size as needed */
+}
+
+.react-time-picker__inputGroup {
+  border: 1px solid #ccc; /* Adjust the border color as needed */
+  border-radius: 5px;
+}
+
+.react-time-picker__inputGroup__input {
+  color: #333; /* Adjust the text color as needed */
 }
