--- a/client-side/src/styles/Allcomponent.scss
+++ b/client-side/src/styles/Allcomponent.scss
@@ -605,6 +605,9 @@ button:focus {
 	.container {
 		max-width: 1200px
 	}
+  .ReactModal__Content{
+    width: 100%;
+  }
 }
 
 @media (min-width: 1400px) {
@@ -955,9 +958,9 @@ font-size: 14px;
   border-radius: 10px;
   padding: 30px;
   background: #ffffff;
-  height: 500px;
-  min-height: 500px;
-  max-height: 500px;
+  height: 380px;
+  min-height: 380px;
+  max-height: 380px;
   width: 100%;
 }
 .logoutbtn{
@@ -1019,29 +1022,29 @@ padding: 10px;
 .dropdown{
   max-height: 200px;
   min-height: 200px;
-  overflow-x: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
 /* width */
-.dropdown::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 8px;
 }
 
 /* Track */
-.dropdown::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background: #f5f5f5;
   border-radius: 10px;
 }
  
 /* Handle */
-.dropdown::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background: #252525; 
   border-radius: 10px;
 }
 
 /* Handle on hover */
-.dropdown::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
   background: #D7d523; }
 
   .messageBox{
@@ -1099,12 +1102,203 @@ padding: 10px;
 
 }
 
+
+.driverforms input{
+  background: unset !important;
+color: #000;
+width: 100%;
+border-radius: 5px;
+padding: 10px;
+border: 1px solid #cccccc ;
+}
+.availablelocate{
+  padding: 10px 10px;
+
+h5{
+  font-size: 18px;
+  color: #cccccc;
+  font-weight: 400;
+}
+.drop-box{
+font-size: 14px;
+border: 1px solid #f5f5f5;
+padding: 10px;
+background: #ffffff;
+border-radius: 5px;
+margin-bottom: 5px;
+}
+.drop-box p{
+  margin-bottom: 0;
+}
+.drop-box:hover{
+  background: rgb(215, 213, 35,0.4);
+  border: 1px solid rgb(215, 213, 35,0.4);
+  cursor: pointer;
+}
+.drop-box:active,
+.active {
+background:  rgb(215, 213, 35,0.4);
+border-radius: 5px !important;
+}
+
+}
+.available_scroll{
+  min-height: 280px;
+  max-height: 280px;
+  overflow: scroll;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+.active .drop-box{
+background: rgb(215, 213, 35,0.4) !important;
+border-radius: 5px !important;
+}
+.user_addressbox{
+  padding: 10px;
+  h5{
+    font-size: 18px;
+    color: #cccccc;
+    font-weight: 400;
+  }
+ 
+}
 .C-list{
-  background-color: burlywood;
-  border: solid black;
-  border-radius: 30px;
+  background-color: #ffffff;
+  border:1px solid #ffffff;
+  border-radius: 5px;
+  padding: 10px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  margin: 10px 3px 10px 3px;
+  cursor: pointer;
+}
+.C-list:hover{
+  background:  rgb(215, 213, 35,0.4);
+  border: 1px solid rgb(215, 213, 35,0.4);
+}
+ .userscroll{
+  min-height: 280px;
+  max-height: 280px;
+  overflow: scroll;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+.C-list p{
+margin-bottom: 10px;
+font-size: 14px;
+font-weight: 600;
+}
+.C-list span{
+  color: #777777;
+  font-weight: 400;
+}
+.notravellers{
+  font-size: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: #777777;
+  height: 100%;
+  
+}
+.bookingdetails_card{
+ background: #252525; 
+ border-radius: 10px;
+ color: #ffffff;
+ padding: 10px;
+ margin-top: 10px;
+ text-align: center;
+}
+.bookingdetails_card p{
+  font-size: 14px;
+  border-radius: 5px;
+  color: #252525;
+  margin-bottom: 0;
+  padding: 10px;
+
+}
+.bookingdetails_card h5{
+  font-size: 18px;
+}
+.bookingdetails_card span{
+  font-weight: 300 !important;
+  color: #252525;
+
+}
+
+.book_details{
+  background: #ffffff;
+  color: #252525;
+  border-radius: 5px;
+
+  .driverforms{
+    flex-direction: row;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0px 10px 10px 10px;
+    padding: 10px;
+  }
+}
+.book_details input{
+  width: 200px;
+  margin-left: 10px;
+  background: #ffffff !important;
+  
+}
+.booking_btn{
+  background: #252525;
+  color: #ffffff;
+  font-weight: 400;
+  margin-left: 10px;
+}
+.cancel_booking{
+  background:#ffffff ;
+  color: #252525;
+  border: 1px solid #D7d523;
+}
+.chat_input{
+  background: unset ;
+  color: #000;
+  border-radius: 5px;
+  padding: 10px;
+border: unset ;
+background: unset;
+border: 1px solid #cccccc;
+
+}
+.chat_input_readonly{
+  background: unset ;
+  color: #777777;
+  width: 100%;
+  word-break: break-all;
+  border-radius: 5px;
+  padding: 10px;
+border: unset ;
+background: unset;
+font-size: 14px;
+font-weight: 400;
+text-align: center;
+outline: unset !important;
+}
+.mr_10{margin-right: 10px;}
+.negotiate_btn{
+  background: #252525;
+  color: #fff;
+}
+.ReactModal__Content{
+  height: 300px;
+  min-height: 300px;
+  max-height: 300px;
+  width: 1080px;
+ 
   display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
-  padding: 40px;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+.ReactModal__Overlay{
+  background-color: rgba(30, 30, 30,0.96) !important;
+  inset: unset;
 }
