--- a/client-side/src/styles/Allcomponent.scss
+++ b/client-side/src/styles/Allcomponent.scss
@@ -1338,3 +1338,16 @@ outline: unset !important;
   overflow-x: hidden;
 }
 .align_end{align-items: end !important;}
+
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
